--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@emotion/native": "^11.0.0",
+    "@emotion/react": "^11.4.1",
     "@react-native-firebase/analytics": "^12.7.1",
     "@react-native-firebase/app": "^12.7.1",
     "react": "17.0.1",
